============
Evisum 0.3.0
============

   * Move to Meson build system.
   ...

============
Evisum 0.2.6
============

   * Add support for multiple batteries (GUI).
   * Various refactoring.
   * Increase responsiveness.
   * GUI changes.
   * Shutdown improvements.
   * Fix some memory leaks.
   * Battery names (where applicable).
   * Various small tidying.
   * Use Eina helpers where applicable.
   * Add battery names and model (Linux and FreeBSD).

============
Evisum 0.2.4
============

   * Fix GUI on launch and shutdown.
   * Fix tingle compilation (makefile).
   * Other bug fixes and improvements.

============
Evisum 0.2.2
============

   * Fix OpenBSD CPU usage (6.5+).
   * Visual fixes.
   * Add swapped memory item.
   * Updated tingle command-line tool.
   * Small bug fixes.

============
Evisum 0.2.0
============

   * Add command-line utility (tingle) to complement
     evisum.
   * Fix object destruction before exiting main loop.
   * Add variable unit display (K, M and G).
   * Minor refactoring.

============
Evisum 0.1.2
============

Fixes:

    * Fix process list geometry on resize.
    * Install icon in proper location.
    * Fix .desktop file.
    * Make installation instructions easier.
    * Improve non-Linux builds.

============
Evisum 0.1.1
============

Fixes:

    * Add fallback mechanism on Linux for disk-detection.
    * Make life easier for packagers (thanks Juippis and OnlyHuman).

============
Evisum 0.1.0
============

Features:

    * Full support across Linux, MacOS, FreeBSD and OpenBSD.
    * Process Listing.
    * Single-process view.
    * Start/stop/kill individual process.
    * Process PID, UID, name, thread count, memory use, nice, priority,
      state, CPU ID and CPU usage.
    * CPU monitoring.
    * Memory monitoring.
    * Disk usage monitoring.
    * Network usage monitoring.
    * CPU temperature monitoring.
    * Battery and power status.
