@@ -1,1 +1,1 @@
-0.3.0-beta
+0.3.0
