@@ -2,6 +2,12 @@
 Evisum 0.3.0
 ============
 
+   * Fix UI alignment.
+   * Add search to UI.
+   * General tidying.
+   * Fix rare crash.
+   * Fix some calculations.
+   * OpenBSD specific fixes.
    * Move to Meson build system.
    ...
 
